add poster(logo) top in index.html file

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             </div>
         </div>
     </header>
+    <section class="logo_poster">
+        <div class="logo_poster_div box">
+            <img src="poster08-02-2024.jpg" alt="logo_poster" class="logo_poster_img box">
+        </div>
+    </section>
     <section class="clinica">
         <div class="clinica_box box">
             <span class="clinica_header">Clinica Familiar</span>
