1.create a new comments.html file connect with index.html file, 2.add button in index.html file, 2a.button on header for translate language, 2b.arrow buttons on comments and 2c circle buttons for nine photos. 3.create a script.js flie is attached html files for using buttons

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <i class="fa-solid fa-bars"></i>
                 <p>Clinica Familiar ProHealth Studio - Frisco</p>
             </div>
+            <div class="header_language">
+                <span class="header_language_text">Translate to:</span>
+                <button class="header_language_button" id="languageButton">English</button>
+            </div>
             <div class="header_rightside">
                 <span>
                     <i class="fa-solid fa-calendar-day"></i>
@@ -57,101 +61,7 @@
             <img src="poster2020-06-27.jpg" alt="logo_poster" class="logo_poster_img box">
         </div>
     </section>
-    <section class="testimonios">
-        <div class="testimonios_box box">
-            <div class="testimonios_header">
-                <b>______</b>
-                <span>TESTIMONIOS</span>
-            </div>
-            <div class="testimonios_comments_parent box">
-                <div class="testimonios_comments testimonios_comments1">
-                    <div class="testimonios_comments_rating">
-                        <span class="testimonios_comments_rating_year">
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <p>3 years ago</p>
-                        </span>
-                        <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
-                    </div>
-                    <div>"The 3D/4D ultrasound has been the neatest and best experience of my pregnancy...and really
-                        life
-                        thus far. I shopped
-                        around for price, and this facility had the best, but quality and service were NOT skimped. In
-                        fact,
-                        after the
-                        ultrasound, the time Helena spent with us, and what we got, my husband was literally shocked
-                        that
-                        the price was so
-                        good!! He thought there was a mistake, but no! This place is just the best deal with the best
-                        service, and we got
-                        phenomenal photos and videos, even at 24 weeks! Helena was SO nice, helpful, and answered all of
-                        our
-                        questions. This
-                        ultrasound was longer, more thorough, more reassuring, and more helpful than even my anatomy
-                        scan. I
-                        will recommend it
-                        to everyone!!!"</div>
-                    <div class="testimonios_comments_name">- Laura M</div>
-                </div>
-                <div class="testimonios_comments testimonios_comments2">
-                    <div class="testimonios_comments_rating">
-                        <span class="testimonios_comments_rating_year">
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <p>3 years ago</p>
-                        </span>
-                        <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
-                    </div>
-                    <div>"Great costumer service, reception, and treatment. Dr. Helena is awesome! Loved my experience
-                        there. It was my first
-                        prenatal and best ultrasound of all; unfortunately it was the only one I did with her because I
-                        don’t live in the area.
-                        She took time to show my baby around with no hurry. She was the one giving us sweet the news we
-                        were having a baby girl.
-                        Explained and discussed things with us as much she was was able to. And the super modern
-                        ultrasound equipment is so cool
-                        and worth it. F.S."</div>
-                    <div class="testimonios_comments_name">- Mila S</div>
-                </div>
-                <div class="testimonios_comments testimonios_comments3">
-                    <div class="testimonios_comments_rating">
-                        <span class="testimonios_comments_rating_year">
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <p>3 years ago</p>
-                        </span>
-                        <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
-                    </div>
-                    <div>"I had an excellent experience at Dr. Helena’s office, from scheduling to consultation.
-                        Everyone was very courteous and
-                        knowledgeable. The overall atmosphere of the clinic is friendly and my family and I were treated
-                        very kindly. Dr.
-                        Helena’s bedside manner is outstanding and she’s always available to answer questions, even
-                        after the visit."</div>
-                    <div class="testimonios_comments_name">- Gabriela M</div>
-                </div>
-            </div>
-            <div class="testimonios_footer">
-                <span>ESCRIBE UN COMENTARIO</span>
-                <span>MÁS INFORMACIÓN</span>
-            </div>
-        </div>
-    </section>
+    <iframe src="comments.html" frameborder="0" width="100%" height="500px"></iframe>
     <section class="galeria">
         <div class="galeria_box box">
             <div class="galeria_header">
@@ -159,17 +69,28 @@
                 <span>GALERÍA</span>
             </div>
             <div class="galeria_images box">
-                <img src="IMG_3248.jpg" alt="image1">
-                <img src="IMG_3248(1).jpg" alt="image1">
-                <img src="IMG_3248(2).jpg" alt="image1">
+                <img src="image01.jpg" alt="image1" class="photo01 photos">
+                <img src="image02.jpg" alt="image1" class="photo02 photos">
+                <img src="image03.jpg" alt="image1" class="photo03 photos">
 
-                <img src="C7453155-8145-41A4-AB74-5B572D93DD3E.jpeg" alt="image1">
-                <img src="880FEFCA-CC8E-485C-9526-D3E8291F0680.jpeg" alt="image1">
-                <img src="23B78676-04D4-4062-8BC3-975490131602.jpeg" alt="image1">
+                <img src="image04.jpeg" alt="image1" class="photo04 photos">
+                <img src="image05.jpeg" alt="image1" class="photo05 photos">
+                <img src="image06.jpeg" alt="image1" class="photo06 photos">
 
-                <img src="0CC4F929-54D3-4A12-AE31-659E1914F989.jpeg" alt="image1">
-                <img src="010B0067-95B2-4BFB-A91B-120012FE081F.jpeg" alt="image1">
-                <img src="2020-06-27(1).jpg" alt="image1">
+                <img src="image07.jpeg" alt="image1" class="photo07 photos">
+                <img src="image08.jpeg" alt="image1" class="photo08 photos">
+                <img src="image09.jpg" alt="image1" class="photo09 photos">
+            </div>
+            <div class="galeria_images_buttons">
+                <span class="photo01_button photos_button"></span>
+                <span class="photo02_button photos_button"></span>
+                <span class="photo03_button photos_button"></span>
+                <span class="photo04_button photos_button"></span>
+                <span class="photo05_button photos_button"></span>
+                <span class="photo06_button photos_button"></span>
+                <span class="photo07_button photos_button"></span>
+                <span class="photo08_button photos_button"></span>
+                <span class="photo09_button photos_button"></span>
             </div>
         </div>
     </section>
@@ -247,5 +168,6 @@
         </div>
     </footer>
 </body>
+<script src="script.js"></script>
 
 </html>
