add mobile view

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                 <p>Clinica Familiar ProHealth Studio - Frisco</p>
             </div>
             <div class="header_language">
-                <span class="header_language_text">Translate to:</span>
-                <button class="header_language_button" id="languageButton">English</button>
+                <button class="header_language_button" id="languageButton"><span class="header_language_text">Translate
+                        to:</span>
+                    <img src="language_translation.png" alt="lang_image"></button>
             </div>
             <div class="header_rightside">
                 <span>
@@ -58,7 +59,7 @@
     </section>
     <section class="logo_poster">
         <div class="logo_poster_div box">
-            <img src="poster2020-06-27.jpg" alt="logo_poster" class="logo_poster_img box">
+            <img src="poster08-02-2024(2).png" alt="logo_poster" class="logo_poster_img box">
         </div>
     </section>
     <iframe src="comments.html" frameborder="0" width="100%" height="500px"></iframe>
@@ -104,7 +105,7 @@
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3339.9922505148693!2d-96.8474852!3d33.1618303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864c39f005796353%3A0x1c50fafa46c22f75!2sClinica%20Familiar%20ProHealth%20Studio%20-%20Frisco!5e0!3m2!1sen!2sin!4v1709830717162!5m2!1sen!2sin"
                     width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    referrerpolicy="no-referrer-when-downgrade" class="comunicate_map_iframe"></iframe>
             </div>
         </div>
     </section>
