menu changes are done, images when we click leftside or rightside on the images for change the image, decrease padding top to bottom all sections And add one address & no. and in footer add your company name, etc

--- a/comments.html
+++ b/comments.html
@@ -29,19 +29,6 @@
             </div>
             <div class="testimonios_comments_parent box">
                 <div class="testimonios_comments testimonios_comments1">
-                    <div class="testimonios_comments_rating">
-                        <span class="testimonios_comments_rating_year">
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <p>3 years ago</p>
-                        </span>
-                        <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
-                    </div>
                     <div>"The 3D/4D ultrasound has been the neatest and best experience of my pregnancy...and really
                         life
                         thus far. I shopped
@@ -61,8 +48,6 @@
                         will recommend it
                         to everyone!!!"</div>
                     <div class="testimonios_comments_name">- Laura M</div>
-                </div>
-                <div class="testimonios_comments testimonios_comments2">
                     <div class="testimonios_comments_rating">
                         <span class="testimonios_comments_rating_year">
                             <span>
@@ -74,8 +59,10 @@
                             </span>
                             <p>3 years ago</p>
                         </span>
-                        <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                        <!-- <span><i class="fa-solid fa-ellipsis-vertical"></i></span> -->
                     </div>
+                </div>
+                <div class="testimonios_comments testimonios_comments2">
                     <div>"Great costumer service, reception, and treatment. Dr. Helena is awesome! Loved my experience
                         there. It was my first
                         prenatal and best ultrasound of all; unfortunately it was the only one I did with her because I
@@ -86,8 +73,6 @@
                         ultrasound equipment is so cool
                         and worth it. F.S."</div>
                     <div class="testimonios_comments_name">- Mila S</div>
-                </div>
-                <div class="testimonios_comments testimonios_comments3">
                     <div class="testimonios_comments_rating">
                         <span class="testimonios_comments_rating_year">
                             <span>
@@ -99,8 +84,10 @@
                             </span>
                             <p>3 years ago</p>
                         </span>
-                        <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                        <!-- <span><i class="fa-solid fa-ellipsis-vertical"></i></span> -->
                     </div>
+                </div>
+                <div class="testimonios_comments testimonios_comments3">
                     <div>"I had an excellent experience at Dr. Helena’s office, from scheduling to consultation.
                         Everyone was very courteous and
                         knowledgeable. The overall atmosphere of the clinic is friendly and my family and I were treated
@@ -108,6 +95,19 @@
                         Helena’s bedside manner is outstanding and she’s always available to answer questions, even
                         after the visit."</div>
                     <div class="testimonios_comments_name">- Gabriela M</div>
+                    <div class="testimonios_comments_rating">
+                        <span class="testimonios_comments_rating_year">
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <p>3 years ago</p>
+                        </span>
+                        <!-- <span><i class="fa-solid fa-ellipsis-vertical"></i></span> -->
+                    </div>
                 </div>
             </div>
             <div class="testimonios_comments_arrow">
