remove location from header and add location in first box in body and some of changes in mobile views

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         </a>
                     </ul>
                 </div>
-                <p>Clinica Familiar ProHealth Studio - Frisco</p>
+                <p>Clinica Familiar ProHealth Studio</p>
             </div>
             <div class="header_rightside header_rightside01">
                 <span>
@@ -177,7 +177,7 @@
     <section class="clinica">
         <div class="clinica_box box">
             <span class="clinica_header">Clinica Familiar</span>
-            <span class="clinica_address">Su Clínica Familiar en Frisco, TX <br>
+            <span class="clinica_address">Su Clínica Familiar en Frisco y Plano, TX <br>
                 Abrimos a las 10:00 a.m.</span>
             <input type="submit" value="RESERVA UNA CITA" class="clinica_button">
             <span class="clinica_text">Es la imagen del encabezado que se utilizará para el sitio</span>
