remove translate button from header

--- a/index.html
+++ b/index.html
@@ -41,38 +41,20 @@
                                 Galeria
                             </li>
                         </a>
-                        <a href="#localmap" class="header_main-menu_ul-li-a">
+                        <!-- <a href="#localmap" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Contacto
                             </li>
-                        </a>
+                        </a> -->
                     </ul>
                     <ul id="header_menu-main-menu" class="header_main-menu_ul header_main-menu_ul02"
                         style="display: none;">
-                        <a href="#comments" class="header_main-menu_ul-li-a">
-                            <li class="header_main-menu_ul-li">
-                                Testimonios
-                            </li>
-                        </a>
-                        <a href="#gallery" class="header_main-menu_ul-li-a">
-                            <li class="header_main-menu_ul-li">
-                                Galeria
-                            </li>
-                        </a>
-                        <a href="#localmap" class="header_main-menu_ul-li-a">
-                            <li class="header_main-menu_ul-li">
-                                Contacto
-                            </li>
-                        </a>
                         <a href="https://www.google.com/maps/dir//Clinica+Familiar+ProHealth+Studio+-+Frisco/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c39f005796353:0x1c50fafa46c22f75!2m2!1d-96.84732819999999!2d33.1617672"
                             target="_blank" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Cómo Llegar
                             </li>
                         </a>
-                    </ul>
-                    <ul id="header_menu-main-menu" class="header_main-menu_ul header_main-menu_ul03"
-                        style="display: none;">
                         <a href="#comments" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Testimonios
@@ -83,11 +65,14 @@
                                 Galeria
                             </li>
                         </a>
-                        <a href="#localmap" class="header_main-menu_ul-li-a">
+                        <!-- <a href="#localmap" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Contacto
                             </li>
-                        </a>
+                        </a> -->
+                    </ul>
+                    <ul id="header_menu-main-menu" class="header_main-menu_ul header_main-menu_ul03"
+                        style="display: none;">
                         <a href="tel:+1-469-473-4120" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Llamar Ahora
@@ -99,9 +84,6 @@
                                 Cómo Llegar
                             </li>
                         </a>
-                    </ul>
-                    <ul id="header_menu-main-menu" class="header_main-menu_ul header_main-menu_ul04"
-                        style="display: none;">
                         <a href="#comments" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Testimonios
@@ -112,11 +94,15 @@
                                 Galeria
                             </li>
                         </a>
-                        <a href="#localmap" class="header_main-menu_ul-li-a">
+                        <!-- <a href="#localmap" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Contacto
                             </li>
-                        </a>
+                        </a> -->
+
+                    </ul>
+                    <ul id="header_menu-main-menu" class="header_main-menu_ul header_main-menu_ul04"
+                        style="display: none;">
                         <a href="" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Reserva Una Cita
@@ -133,6 +119,21 @@
                                 Cómo Llegar
                             </li>
                         </a>
+                        <a href="#comments" class="header_main-menu_ul-li-a">
+                            <li class="header_main-menu_ul-li">
+                                Testimonios
+                            </li>
+                        </a>
+                        <a href="#gallery" class="header_main-menu_ul-li-a">
+                            <li class="header_main-menu_ul-li">
+                                Galeria
+                            </li>
+                        </a>
+                        <!-- <a href="#localmap" class="header_main-menu_ul-li-a">
+                            <li class="header_main-menu_ul-li">
+                                Contacto
+                            </li>
+                        </a> -->
                     </ul>
                 </div>
                 <p>Clinica Familiar ProHealth Studio</p>
@@ -182,11 +183,11 @@
             </div>
             <div class="header_rightside header_rightside04" style="display: none; gap:0px; padding: 0px;">
             </div>
-            <div class="header_language">
+            <!-- <div class="header_language">
                 <button class="header_language_button" id="languageButton"><span class="header_language_text">Translate
                         to:</span>
                     <img src="language_translation.png" alt="lang_image"></button>
-            </div>
+            </div> -->
         </div>
     </header>
 
@@ -196,7 +197,7 @@
             <span class="clinica_address">Su Clínica Familiar en Frisco y Plano, TX <br>
                 Abrimos a las 10:00 a.m.</span>
             <input type="submit" value="RESERVA UNA CITA" class="clinica_button">
-            <span class="clinica_text">Es la imagen del encabezado que se utilizará para el sitio</span>
+            <!-- <span class="clinica_text">Es la imagen del encabezado que se utilizará para el sitio</span> -->
         </div>
     </section>
     <section class="logo_poster">
@@ -205,7 +206,7 @@
         </div>
         <div id="comments"></div>
     </section>
-    <iframe src="comments.html" frameborder="0" width="100%" height="400px"></iframe>
+    <iframe src="comments.html" frameborder="0" width="100%" height="330px"></iframe>
     <section class="galeria">
         <div class="galeria_box box">
             <div class="galeria_header">
@@ -317,6 +318,7 @@
                         del encabezado de Clinica Hispana ProHealth Studio - Frisco</span></a>
                 <a href="https://shushanktech.netlify.app/" target="_blank" style="color: gray;"><span>Con tecnología
                         de ShushankTech</span></a>
+                <!-- <a href="https://shushanktech.netlify.app/" target="_blank" style="color: gray;">Desarrollado por ShushankTech</a> -->
             </div>
         </div>
     </footer>
