add toggle switch on header in index.html file

--- a/index.html
+++ b/index.html
@@ -221,8 +221,17 @@
             <div class="header_language">
                 <button class="header_language_button" id="languageButton">
                     <span class="header_language_text">
-                        <span class="spanish_language">Translate to: English</span>
-                        <span class="english_language">Traducir a: Española</span>
+                        <!-- <span class="spanish_language">Translate to: <i class="fa-solid fa-toggle-on"></i>
+                            English</span>
+                        <span class="english_language">Traducir a: <i class="fa-solid fa-toggle-off"></i>
+                            Española</span> -->
+                        <span class="spanish_language">Span <i class="fa-solid fa-toggle-off"></i> <span
+                                style="color: lightgray;">Eng</span>
+                        </span>
+                        <span class="english_language">
+                            <span style="color: lightgray;">Span</span> <i class="fa-solid fa-toggle-on"></i> Eng</span>
+
+
                     </span>
                     <!-- <img src="language_translation.png" alt="lang_image"> -->
                 </button>
