change text in toggle button  on header in index.html file

--- a/index.html
+++ b/index.html
@@ -225,12 +225,20 @@
                             English</span>
                         <span class="english_language">Traducir a: <i class="fa-solid fa-toggle-off"></i>
                             Española</span> -->
-                        <span class="spanish_language">Span <i class="fa-solid fa-toggle-off"></i> <span
+
+
+                        <!-- <span class="spanish_language">Span <i class="fa-solid fa-toggle-off"></i> <span
                                 style="color: lightgray;">Eng</span>
                         </span>
                         <span class="english_language">
-                            <span style="color: lightgray;">Span</span> <i class="fa-solid fa-toggle-on"></i> Eng</span>
+                            <span style="color: lightgray;">Span</span> <i class="fa-solid fa-toggle-on"></i> Eng</span> -->
 
+
+                        <span class="spanish_language">ESP <i class="fa-solid fa-toggle-off"></i> <span
+                                style="color: lightgray;">ENG</span>
+                        </span>
+                        <span class="english_language">
+                            <span style="color: lightgray;">ESP</span> <i class="fa-solid fa-toggle-on"></i> ENG</span>
 
                     </span>
                     <!-- <img src="language_translation.png" alt="lang_image"> -->
