commons are removed from box1 and book appoinment button color and form button color changed

--- a/index.html
+++ b/index.html
@@ -306,22 +306,22 @@
     <section class="more_services">
         <div class="more_services_list box">
             <span class="spanish_language">
-                <li>Ultrasounds,</li>
+                <li>Ultrasounds</li>
             </span>
             <span class="english_language">
-                <li>Ultrasonidos,</li>
+                <li>Ultrasonidos</li>
             </span>
             <span class="spanish_language">
-                <li>Urgencias Menores,</li>
+                <li>Urgencias Menores</li>
             </span>
             <span class="english_language">
-                <li>Minor Emergencies,</li>
+                <li>Minor Emergencies</li>
             </span>
             <span class="spanish_language">
-                <li>Examen de Covid and</li>
+                <li>Examen de Covid</li>
             </span>
             <span class="english_language">
-                <li>Covid Test and</li>
+                <li>Covid Test</li>
             </span>
 
             <span class="spanish_language">
